<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="edu.tecii.android.practica6.MainActivity"
    android:orientation="vertical"
    android:gravity="center_horizontal">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/CalifA"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/P1" />

        <EditText
            android:layout_width="@dimen/Edit"
            android:layout_height="wrap_content"
            android:id="@+id/txtA1" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/P2"/>

        <EditText
            android:layout_width="@dimen/Edit"
            android:layout_height="wrap_content"
            android:id="@+id/txtA2" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/P3" />

        <EditText
            android:layout_width="@dimen/Edit"
            android:layout_height="wrap_content"
            android:id="@+id/txtA3" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/P4"/>

        <EditText
            android:layout_width="@dimen/Edit"
            android:layout_height="wrap_content"
            android:id="@+id/txtA4" />
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/CalifB"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/P1" />

        <EditText
            android:layout_width="@dimen/Edit"
            android:layout_height="wrap_content"
            android:id="@+id/txtB1" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/P2"/>

        <EditText
            android:layout_width="@dimen/Edit"
            android:layout_height="wrap_content"
            android:id="@+id/txtB2" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/P3" />

        <EditText
            android:layout_width="@dimen/Edit"
            android:layout_height="wrap_content"
            android:id="@+id/txtB3" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/P4"/>

        <EditText
            android:layout_width="@dimen/Edit"
            android:layout_height="wrap_content"
            android:id="@+id/txtB4" />
    </LinearLayout>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btncalc"
        android:text="@string/Calcular"
        android:onClick="calcular"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/PY" />

        <EditText
            android:layout_width="@dimen/Edit"
            android:layout_height="wrap_content"
            android:id="@+id/txtPY" />
    </LinearLayout>

</LinearLayout>
